add pagination to get all books
